# telemetrix-esp32

./: 404.html  README.md  index.html  mkdocs.yml  pypi_desc.md  pyproject.toml  setup.py  sitemap.xml
about/: index.html
api/: index.html
arduino_ide/: index.html
callback/: index.html
debug/: index.html
docs/: about.md  api.md  arduino_ide.md  callback.md  debug.md  features_examples.md  index.md  install_telemetrix.md  pins.md  python3.md  server.md
examples/ble/: analog_input_ble.py  blink_ble.py  dac_ble.py  (+15 more)
examples/ble-aio/: analog_input_ble_aio.py  blink_ble_aio.py  dac_ble_aio.py  dht_ble.py  dht_ble_aio.py  digital_input_ble.py  digital_input_ble_aio.py  digital_input_pulldown_ble_aio.py  digital_input_pullup_ble_aio.py  fade_ble_aio.py  hc-sr04_distance_sensor_aio.py  hc-sr04_distance_sensor_ble_aio.py  i2c_adxl345_accelerometer_ble_aio.py  loop_back_ble_aio.py  onewire_ds18x20_ble_aio.py  servo_ble_aio.py  spi_mpu9250_ble_aio.py  stepper_absolute_ble_aio.py  stepper_continuous_ble.py  stepper_continuous_ble_aio.py  stepper_relative_ble_aio.py  touch_input_ble_aio.py  wba_blink.py
features_examples/: index.html
images/: cover.odg
install_telemetrix/: index.html
license/: index.html
pins/: index.html
python3/: index.html
ref/: index.html
search/: search_index.json
server/: index.html
telemetrix_aio_esp32/: ble_aio_transport.py  socket_aio_transport.py  telemetrix_aio_esp32.py
telemetrix_esp32/: private_constants.py  telemetrix_esp32.py
telemetrix_esp32_common/: aio_socket_transport.py  ble_transport.py  private_constants.py
(+38 files in other folders)
